# vive_franka_teleop

./: .gitignore  LICENSE  README.md
config/: fastdds_lan_only.xml  fastdds_lan_only_NEIGHBOR.xml  teleop_params.yaml  viz_params.yaml
docs/: DEVELOPMENT.md  TELEOP_INTERFACE.md  VIVE_DELTA_SENDER_BRIEF.md  VIVE_PC_HANDOFF.md
scripts/: delta_monitor.py  delta_viz.py  ee_monitor.py  fix_ros_net.sh  foot_pedal_teleop.py  hand_target_test.py  run_clutch.sh  run_delta_monitor.sh  run_delta_viz.sh  run_relative_pose.sh  run_tracker_read.sh  run_viz.sh  run_viz_and_read.sh  start_teleop_pipeline.sh  teleop_clutch_key.py  tracker_read.py
scripts/legacy/: 60-HTC-Vive-perms.rules  configure_steamvr_null_hmd.sh  install_ubuntu.sh  live_monitor.py  verify_setup.sh
src/vive_3d_viz/: README.md  package.xml  setup.cfg  setup.py
src/vive_3d_viz/launch/: teleop.launch.py  viz.launch.py
src/vive_3d_viz/rviz/: viz.rviz
src/vive_3d_viz/test/: test_relative_pose.py
src/vive_3d_viz/vive_3d_viz/: list_devices.py  relative_pose.py  relative_pose_node.py  teleop_delta_node.py  viz_node.py
src/vive_teleop_3d/: README.md  package.xml  setup.cfg  setup.py
src/vive_teleop_3d/launch/: survive_tracker.launch.py
src/vive_teleop_3d/scripts/: run_survive.sh
src/vive_tracker_ros2/: README.md  SETUP.md  package.xml  setup.cfg  setup.py
src/vive_tracker_ros2/config/: trackers.example.yaml
src/vive_tracker_ros2/launch/: vive_mock.launch.py  vive_tracker.launch.py
src/vive_tracker_ros2/vive_tracker_ros2/: list_devices.py  mock_tracker_node.py  tracker_node.py
(+2 files in other folders)
