<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vive_tracker_ros2</name>
  <version>0.1.0</version>
  <description>HTC Vive Tracker pose publisher for ROS2 (Humble). Uses SteamVR + pyopenvr + triad_openvr.</description>
  <maintainer email="jay.lee@kist.re.kr">Jay Lee</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <!-- pyopenvr (pip install openvr) is a runtime dependency installed outside rosdep. -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
